update controller, model and view layouts

--- a/Views/index.html
+++ b/Views/index.html
@@ -1,7 +1,21 @@
 {% extends "layouts/layouts.html" %}
-{% block head %}
-{{ parent() }}
-{% endblock %}
+{% block title %} Index Page {% endblock %} 
+
 {% block content %}
-<h3> This is from index.html <h3>
+    <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                {% for post in posts %}
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-body">
+                            <h3>{{ post.title }}</h3>
+                            <p class="card-text">{{ post.description }}</p>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
